--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Backend
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=vacprojectlostandfound@gmail.com
-spring.mail.password=zmqk kshz avmy xwtg
+spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.org.springframework.mail=DEBUG
